...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose your meal" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qi5-fc-bcd">
                                                <rect key="frame" x="0.0" y="280" width="414" height="20.5"/>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Burgers" translatesAutoresizingMaskIntoConstraints="NO" id="K3l-qp-oZd">
                                                <rect key="frame" x="20" y="320.5" width="374" height="90"/>
                                                <gestureRecognizers/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="K3l-qp-oZd" secondAttribute="height" multiplier="187:45" id="5WN-nM-OvD"/>
                                                    <constraint firstAttribute="height" constant="90" id="7RV-aZ-qdT"/>
                                                </constraints>
                                                <connections>
                                                    <outletCollection property="gestureRecognizers" destination="vJJ-Be-hgZ" appends="YES" id="c89-m5-0HN"/>
                                                </connections>
                                            </imageView>
                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Desserts" translatesAutoresizingMaskIntoConstraints="NO" id="PaW-fm-O3Z">
                                                <rect key="frame" x="20" y="428.5" width="374" height="90"/>
                                                <gestureRecognizers/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="PaW-fm-O3Z" secondAttribute="height" multiplier="187:45" id="1DJ-gV-V0U"/>
                                                </constraints>
                                                <connections>
                                                    <outletCollection property="gestureRecognizers" destination="kCQ-y4-Zvk" appends="YES" id="H6I-ae-jtD"/>
                                                </connections>
                                            </imageView>
                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Beverage-1" translatesAutoresizingMaskIntoConstraints="NO" id="pu0-Vz-pvg">
                                                <rect key="frame" x="20" y="536.5" width="374" height="90"/>
                                                <gestureRecognizers/>
                                                <constraints>
                                                    <constraint firstAttribute="width" secondItem="pu0-Vz-pvg" secondAttribute="height" multiplier="187:45" id="327-qB-IZY"/>
                                                </constraints>
                                                <connections>
...
                                                </constraints>
                                            </imageView>
                                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lz9-Lh-v8c">
                                                <rect key="frame" x="0.0" y="204" width="414" height="44"/>
                                                <color key="barTintColor" red="0.94117647059999998" green="0.6705882353" blue="0.33725490200000002" alpha="1" colorSpace="calibratedRGB"/>
                                                <items>
                                                    <navigationItem title="Dessert" id="aDd-G9-Jkg">
                                                        <barButtonItem key="leftBarButtonItem" title="Back" id="8Xb-nU-bSg">
                                                            <connections>
                                                                <action selector="btnAction:" destination="f2x-Fg-CUK" id="S4s-bK-XbQ"/>
                                                            </connections>
                                                        </barButtonItem>
                                                    </navigationItem>
                                                </items>
...
                                                </constraints>
                                            </imageView>
                                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uYL-vA-IFU">
                                                <rect key="frame" x="0.0" y="204" width="414" height="44"/>
                                                <color key="barTintColor" red="0.94117647059999998" green="0.6705882353" blue="0.33725490200000002" alpha="1" colorSpace="calibratedRGB"/>
                                                <items>
                                                    <navigationItem title="Beverage" id="ama-Wv-uJ3">
                                                        <barButtonItem key="leftBarButtonItem" title="Back" id="In6-Zx-VfK">
                                                            <connections>
                                                                <action selector="btnAction:" destination="geF-Vk-RH3" id="Nwi-1t-o3c"/>
                                                            </connections>
                                                        </barButtonItem>
                                                    </navigationItem>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I4j-X8-HDk">
                                <rect key="frame" x="20" y="806" width="374" height="31"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Add To Cart">
                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="baseBackgroundColor" red="0.1843137255" green="0.74901960779999999" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="addToCart:" destination="dLY-1P-c6H" eventType="touchUpInside" id="tlD-6h-zLR"/>
                                    <action selector="placeOrderBtnClicked:" destination="dLY-1P-c6H" eventType="touchUpOutside" id="zME-vm-Ucg"/>
...
